--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -29,13 +29,13 @@ body {
 /* Declare heights because of positioning of img element */
 .carousel-item {
   height: 32rem;
-
 }
+
 
 .carousel-item h1{
     color: #13b3b9;
     font-size: 2rem;
-    margin-right: 35%
+    margin-right: 35%;
     font-family: 'Montserrat', sans-serif;
 }
 .carousel-item h4{
@@ -43,7 +43,7 @@ body {
     margin-right: 50%;
     font-size: 3rem;
     font-family: 'Varela Round', sans-serif;
-    margin-bottom: 10%
+    margin-bottom: 5%
 }
 .carousel-control-prev{
   color:#898b8a;
@@ -58,4 +58,17 @@ body {
   left: 0;
   min-width: 100%;
   height: 32rem;
+}
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #f6f5f1;
+  text-align: center;
+}
+.footer i {
+  font-size:35px;
+  margin-right: 20px;
+  color: black;
 }
