--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,13 @@
     <meta charset="utf-8">
     <%- include('partials/header.ejs') %>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!--w3schools css-->
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <!--Bootstrap css-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <!--Font awesome css-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <!--Custom css-->
     <link rel="stylesheet" href="css/styles.css">
 
     <title>Krittika Profile</title>
@@ -12,51 +18,7 @@
 
   <body>
     <div id="slides">
-      <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-          <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-          <li data-target="#myCarousel" data-slide-to="1"></li>
-          <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>
-
-        <!-- Wrapper for slides -->
-        <!--For anyone wondering how I changed the background color, just get that svg tag outta the way. Then select the class u want the background cololor to be and, well, assign it!-->
-        <div>
-        <div class="carousel-inner">
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-
-              <div class="container">
-                <div class="carousel-caption text-left">
-                  <h1>Hey! I'm Krittika</h1>
-                  <h4>I'm a web developer in progress</h4>
-                </div>
-              </div>
-            </div>
-            <div class="carousel-item">
-
-              <div class="container">
-                <div class="carousel-caption">
-                  <h1 style='fon'>Another example headline.</h1>
-                  <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-
-                </div>
-              </div>
-            </div>
-            <div class="carousel-item">
-
-              <div class="container">
-                <div class="carousel-caption text-right">
-                  <h1>One more for good measure.</h1>
-                  <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-
+      <%- include('partials/carousel.ejs')%>
         <!-- Left and right controls -->
         <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -68,8 +30,12 @@
         </a>
       </div>
     </div>
-
+  <footer>
+      <%- include('partials/footer.ejs')%>
+      
+  </footer>
   </body>
+  <!--Bootstrap javascript-->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
