Small changes added

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -17,22 +17,15 @@
   </head>
 
   <body>
-    <div id="slides">
-      <%- include('partials/carousel.ejs')%>
-        <!-- Left and right controls -->
-        <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
-    </div>
+  <div id="slides">
+    <%- include('partials/carousel.ejs')%>
+  </div>
+  <div id="abilities">
+    <%- include('partials/abilities.ejs')%>
+  </div>
   <footer>
       <%- include('partials/footer.ejs')%>
-      
+
   </footer>
   </body>
   <!--Bootstrap javascript-->
