--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,6 +4,9 @@
 -------------------------------------------------- */
 /* Padding below the footer and lighter body text */
 
+html{
+  scroll-behavior: smooth;
+}
 body {
   padding-top: 3rem;
   padding-bottom: 3rem;
