--- a/views/partials/carousel.ejs
+++ b/views/partials/carousel.ejs
@@ -16,29 +16,39 @@
         <div class="container">
           <div class="carousel-caption text-left">
             <h1 class='w3-animate-bottom'>Hey! I'm Krittika</h1>
-            <h4 class='w3-animate-bottom'>I'm a web developer in progress</h4>
+            <h4 class='w3-animate-bottom'>I'm a web developer in progress.</h4>
           </div>
         </div>
       </div>
       <div class="carousel-item">
 
         <div class="container">
-          <div class="carousel-caption">
-            <h1 style='fon'>Another example headline.</h1>
-            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-            <i class="fab fa-github-square"></i>
+          <div class="carousel-caption text-left">
+            <h1>About Me</h1>
+            <h4>I'm 11. I've been learning web dev for a year now.</h4>
           </div>
         </div>
       </div>
       <div class="carousel-item">
 
         <div class="container">
-          <div class="carousel-caption text-right">
-            <h1>One more for good measure.</h1>
-            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+          <div class="carousel-caption text-left">
+            <h1>Explore</h1>
+            <h4>Explore my website to know more about me!</h4>
 
           </div>
         </div>
       </div>
     </div>
   </div>
+  <!-- Left and right controls -->
+  <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+</div>
