--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,11 +1,9 @@
 
     <div class="footer">
     <p>
-        <a href="https://www.github.com" target="_blank"><i class="fa fa-github"></i></a>
+        <a href="https://www.github.com/Krittika-Saha" target="_blank"><i class="fa fa-github"></i></a>
         <a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook"></i></a>
-        <a href="https://www.reddit.com" target="_blank"><i class="fa fa-reddit"></i></a>
-        <a href="https://www.snapchat.com" target="_blank"><i class="fa fa-snapchat"></i></a>
-        <a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram"></i></a>
-        <p style='color:black; font-family: 'Montserrat', sans-serif' class="fa fa-copyright"> Copyright 2020</p>
+        <a href="https://www.twitter.com"><i class="fa fa-twitter"></i></a>
+        <p style='color:black'> © Copyright 2020</p>
     </p>
   </div>
