Abilities section added and UNresponsive images added in the carousel.

--- a/views/partials/carousel.ejs
+++ b/views/partials/carousel.ejs
@@ -17,6 +17,7 @@
           <div class="carousel-caption text-left">
             <h1 class='w3-animate-bottom'>Hey! I'm Krittika</h1>
             <h4 class='w3-animate-bottom'>I'm a web developer in progress.</h4>
+            <img src="img/Profile.png" alt="Profile" id='profile'>
           </div>
         </div>
       </div>
@@ -26,6 +27,7 @@
           <div class="carousel-caption text-left">
             <h1>About Me</h1>
             <h4>I'm 11. I've been learning web dev for a year now.</h4>
+            <img src="img/Coding.png" alt="Coding" id='coding'>
           </div>
         </div>
       </div>
@@ -35,7 +37,7 @@
           <div class="carousel-caption text-left">
             <h1>Explore</h1>
             <h4>Explore my website to know more about me!</h4>
-
+            <img src="img/Search.png" alt="Explore" id='explore'>
           </div>
         </div>
       </div>
