--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,9 +1,10 @@
 
     <div class="footer">
-    <p>
-        <a href="https://www.github.com/Krittika-Saha" target="_blank"><i class="fa fa-github"></i></a>
-        <a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook"></i></a>
-        <a href="https://www.twitter.com"><i class="fa fa-twitter"></i></a>
-        <p style='color:black'> © Copyright 2020</p>
+    <p  style='color:black'>
+        <a href="https://www.github.com/Krittika-Saha" target="_blank"><i class="fab fa-github"></i></a>
+        <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
+        <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
+        <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a><br><br>
+        © Copyright 2020
     </p>
   </div>
