--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -13,7 +13,9 @@ body {
   color: #ffccff;
   font-family: 'Montserrat', sans-serif;
 }
-
+hr{
+  color: #ffccff;
+}
 
 /* CUSTOMIZE THE CAROUSEL
 -------------------------------------------------- */
@@ -46,22 +48,79 @@ body {
     margin-right: 50%;
     font-size: 3rem;
     font-family: 'Varela Round', sans-serif;
-    margin-bottom: 5%
+    margin-bottom: 10%
+}
+
+.ability{
+  text-align: center;
+  font-size: 3rem;
+  font-family: 'Varela Round', sans-serif;
+  color: #13b3b9;
+}
+.lead{
+  text-align: center;
+  font-size: 4/3rem;
+  color: #898b8a;
+}
+.lead2{
+  float: right;
+  font-size: 1rem;
+  color: #898b8a;
+}
+.row {
+    margin-right: -15px;
+    margin-left: -15px;
+}
+#abilities {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 1.5rem;
+    display: block;
+    list-style-type: none;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 40px;
+    color: #898b8a;
+}
+.skill{
+  text-align: left;
+  font-family: 'Varela Round', sans-serif;
+  color: #13b3b9;
+}
+#profile{
+  width: 30.5%;
+  height: 100%;
+  position: absolute;
+  right: 0px;
+  bottom: 90px
+}
+#coding{
+  width: 30.5%;
+  height: 90%;
+  position: absolute;
+  right: 0px;
+  bottom: 90px
+}
+
+#explore{
+  width: 50%;
+  height: 100%;
+  position: absolute;
+  right: 0px;
+  bottom: 65px
 }
 .carousel-control-prev{
   color:#898b8a;
 }
+.ability-score{
+  float: right;
+  color: #13b3b9;
+}
 #slides{
-  background-color: 	#f8edf8;
+  background-color: #f8edf8;
 }
 
-.carousel-item > img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  height: 32rem;
-}
 .footer {
   position: fixed;
   left: 0;
