--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,7 +9,7 @@
     <!--Bootstrap css-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <!--Font awesome css-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css">
     <!--Custom css-->
     <link rel="stylesheet" href="css/styles.css">
 
@@ -21,10 +21,15 @@
     <%- include('partials/carousel.ejs')%>
   </div>
   <div id="abilities">
+
     <%- include('partials/abilities.ejs')%>
   </div>
+  <div id="QuoteOfTheDay">
+    <br><br><br><br><br>
+  </div>
+
   <footer>
-      <%- include('partials/footer.ejs')%>
+      <!-- <%- include('partials/footer.ejs')%> -->
 
   </footer>
   </body>
@@ -33,3 +38,6 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 </html>
+<!-- TODO: Quote of the Day -->
+<!-- TODO: Projects -->
+<!-- TODO: Contact -->
