--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,15 +3,12 @@
     font-family: 'Cedarville Cursive', cursive;
     color: #13b3b9;
   }
-  .special2{
-    margin-right: 1000px
-  }
 </style>
 <link href="https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap" rel="stylesheet">
 
 <header>
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <div class='special2'><a class="navbar-brand" href="#"><b><span class='special'>K</span>rittika</a></b></div>
+    <div><a class="navbar-brand" href="#"><b><span class='special'>K</span>rittika</a></b></div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
