--- a/views/partials/abilities.ejs
+++ b/views/partials/abilities.ejs
@@ -4,18 +4,17 @@
   "Without knowledge, life is no more than the shadow of death"
   <br>
   <span class='lead2'>-Moliere</span>
-  <br>
+  <br/><br/><br/>
 </p>
 <hr>
+<h2 class='skill'>Skills</h2>
   <div class="row">
 
-    <div class="col-md-6" style="font-weight: bold;">
-      <h2 class='skill'>Skills</h2>
-      <br>
+    <div class="col-md-6" style="font-weight: bold; list-style-type: none;">
       <ul>
         <li><span>HTML(5)</span>
           <i class="far fa-star ability-score"></i>
-          <i class="fas fa-star ability-score"></i>
+          <i class="fas fa-star-half-alt ability-score"></i>
           <i class="fas fa-star ability-score"></i>
           <i class="fas fa-star ability-score"></i>
           <i class="fas fa-star ability-score"></i>
@@ -53,7 +52,7 @@
           <i class="fas fa-star ability-score"></i>
         </li>
         </div>
-        <div class="col-md-6" style="font-weight: bold; margin-top: 70px;">
+        <div class="col-md-6" style="font-weight: bold;">
         <li><span>React.js</span>
           <i class="far fa-star ability-score"></i>
           <i class="far fa-star ability-score"></i>
@@ -66,6 +65,14 @@
           <i class="far fa-star ability-score"></i>
           <i class="far fa-star ability-score"></i>
           <i class="far fa-star ability-score"></i>
+          <i class="fas fa-star ability-score"></i>
+          <i class="fas fa-star ability-score"></i>
+        </li>
+        <br>
+        <li><span>Python</span>
+          <i class="far fa-star ability-score"></i>
+          <i class="fas fa-star-half-alt ability-score"></i>
+          <i class="fas fa-star ability-score"></i>
           <i class="fas fa-star ability-score"></i>
           <i class="fas fa-star ability-score"></i>
         </li>
