--- a/views/home.ejs
+++ b/views/home.ejs
@@ -24,13 +24,29 @@
 
     <%- include('partials/abilities.ejs')%>
   </div>
-  <div id="QuoteOfTheDay">
-    <br><br><br><br><br>
+
+  <div  id="projects">
+    <%- include('partials/projects.ejs')%>
   </div>
+  <div id="randomJoke" class='container'>
+    <h2 class='ability'>Random Jokes!</h2><br>
+    <p class='lead'>Some good ol' jokes to cheer you up!<br/><span class='lead2'>Using <a href="https://sv443.net/jokeapi/v2/">Joke API</a></span></p><br><br>
+    <hr>
+    <div class="joke row">
+      <div>
+        <ul style="list-style-type: none">
+          <li><h4><b style="color: #13b3b9;">Category: </b><%=joke%></h4></li><br><br>
+          <li> <h4><b style='color: #13b3b9;'>Joke:</b><%=category%></h4> </li>
 
+        </ul>
+      </div>
+    </div>
+    <hr>
+  </div>
   <footer>
-      <!-- <%- include('partials/footer.ejs')%> -->
-
+      <%- include('partials/footer.ejs')%>
+      <!--  -->
+      <!--  -->
   </footer>
   </body>
   <!--Bootstrap javascript-->
@@ -38,6 +54,6 @@
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 </html>
-<!-- TODO: Quote of the Day -->
+<!-- TODO: Joke of the Day -->
 <!-- TODO: Projects -->
 <!-- TODO: Contact -->
