--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,7 +8,7 @@
 
 <header>
   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-    <div><a class="navbar-brand" href="#"><b><span class='special'>K</span>rittika</a></b></div>
+    <div><a class="navbar-brand" href="#"><b/><span class='special'>K</span>rittika</a></div>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -21,7 +21,7 @@
           <a class="nav-link" href="#abilities"><b>Abilities</b></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#" tabindex="-1" aria-disabled="true"><b>Projects</b></a>
+          <a class="nav-link" href="#projects" ><b>Projects</b></a>
         </li>
       </ul>
     </div>
