Made small corrections.

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,7 +21,10 @@
           <a class="nav-link" href="#abilities"><b>Abilities</b></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#projects" ><b>Projects</b></a>
+          <a class="nav-link" href="#projects"><b>Projects</b></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#randomJoke"><b>Jokes</b></a>
         </li>
       </ul>
     </div>
