--- a/views/home.ejs
+++ b/views/home.ejs
@@ -36,12 +36,28 @@
       <div>
         <ul style="list-style-type: none">
           <li><h4><b style="color: #13b3b9;">Category: </b><%=category%></h4></li><br><br>
-          <li> <h4><b style='color: #13b3b9;'>Joke:</b><%=joke%></h4> </li>
-
+          <li><h4><b style="color: #13b3b9;">Joke: </b><%=joke%></h4></li><br><br>
         </ul>
       </div>
     </div>
     <hr>
+  </div>
+
+  <div id='contactMe' class='jumbotron'>
+    <h1 style="font-family: 'Varela Round', sans-serif;">Contact Me</h1><br/>
+    <form class="" action="/" method="post">
+      <div class="form-group">
+        <label>Name</label>
+        <input class="form-control" type="text" name="postName" placeholder="Your First Name" required><br/>
+        <label>Email(optional)</label>
+        <input class="form-control" type="text" name="userEmail" placeholder="Email"><br/>
+        <label>Title</label>
+        <input class="form-control" type="text" placeholder="Issue/Comment Title" name="postTitle" required><br/>
+        <label>Post</label>
+        <textarea class="form-control" name="postBody" rows="5" cols="30" placeholder="Main Content" required></textarea><br/>
+      </div>
+      <button class="btn btn-info" type="submit" name="button">Send</button>
+    </form>
   </div>
   <br><br><br><br><br>
   <footer>
