--- a/views/partials/carousel.ejs
+++ b/views/partials/carousel.ejs
@@ -15,8 +15,8 @@
 
         <div class="container">
           <div class="carousel-caption text-left">
-            <h1 class='w3-animate-bottom'>Hey! I'm Krittika</h1>
-            <h4 class='w3-animate-bottom'>I'm a web developer in progress.</h4>
+            <h1>Hey! I'm Krittika</h1>
+            <h4>I'm a web developer in progress.</h4>
             <img src="img/Profile.png" alt="Profile" id='profile'>
           </div>
         </div>
