--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,6 +26,9 @@
         <li class="nav-item">
           <a class="nav-link" href="#randomJoke"><b>Jokes</b></a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#contactMe"><b>Contact Me</b></a>
+        </li>
       </ul>
     </div>
   </nav>
