--- a/views/partials/abilities.ejs
+++ b/views/partials/abilities.ejs
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" id='ability'>
   <h2 class='ability'>Abilities</h2>
   <p class='lead'>
   "Without knowledge, life is no more than the shadow of death"
