Set up database using atlas, updated links

--- a/views/partials/projects.ejs
+++ b/views/partials/projects.ejs
@@ -10,7 +10,7 @@
 <div class="row" id='container1'>
   <div class="col-md-6" >
     <div class="container2">
-      <a href="about:blank" target='_blank'><img src="img/project1.png" alt="Avatar" class="image" width='100%' height='120%'></a>
+      <a href="https://blog-website-2765.herokuapp.com/" target='_blank'><img src="img/project1.png" alt="Avatar" class="image" width='100%' height='120%'></a>
       <div class="middle">
         <div class="text"><h2>Blog website</h2>
         <hr class='container-hr'/>
@@ -24,7 +24,7 @@
 <div class="row" id='container2'> -->
 <div class="col-md-6 "  width='10%'>
   <div class="container2" >
-    <a href="about:blank" target='_blank'><img src="img/project2.png" alt="Avatar" class="image" width='100%'></a>
+    <a href="https://to-do-list-4123.herokuapp.com/" target='_blank'><img src="img/project2.png" alt="Avatar" class="image" width='100%'></a>
     <div class="middle">
       <div class="text"><h2>To Do List website</h2>
       <hr class='container-hr'/>
@@ -39,7 +39,7 @@
 
 <div class="col-md-6 ">
   <div class="container2" >
-    <a href="about:blank" target='_blank'><img src="img/project3.png" alt="Avatar" class="image" width='100%'></a>
+    <a href="https://krittika-saha.github.io/Birthday-Countdown/" target='_blank'><img src="img/project3.png" alt="Avatar" class="image" width='100%'></a>
     <div class="middle">
       <div class="text"><h2>Birthday Countdown website</h2>
       <hr class='container-hr'/>
