--- a/views/partials/abilities.ejs
+++ b/views/partials/abilities.ejs
@@ -7,93 +7,92 @@
   <br/><br/><br/>
 </p>
 <hr>
-<h2 class='skill'>Skills</h2>
-  <div class="row">
-
-    <div class="col-md-6" style="font-weight: bold; list-style-type: none;">
-      <ul>
-        <li><span>HTML(5)</span>
-          <i class="far fa-star ability-score"></i>
-          <i class="fas fa-star-half-alt ability-score"></i>
-          <i class="fas fa-star ability-score"></i>
-          <i class="fas fa-star ability-score"></i>
-          <i class="fas fa-star ability-score"></i>
-        </li>
-        <br>
-        <li><span>CSS(3)</span>
+<div class="row">
+  <div class="col-md-6" style="font-weight: bold;">
+    <h2 class='skill'>Skills</h2>
+    <br>
+    <li><span>HTML(5)</span>
+      <i class="far fa-star ability-score"></i>
+      <i class="fas fa-star ability-score"></i>
+      <i class="fas fa-star ability-score"></i>
+      <i class="fas fa-star ability-score"></i>
+    </li>
+    <br>
+    <li><span>CSS(3)</span>
+    <i class="far fa-star ability-score"></i>
+    <i class="fas fa-star-half-alt ability-score"></i>
+    <i class="fas fa-star ability-score"></i>
+    <i class="fas fa-star ability-score"></i>
+    <i class="fas fa-star ability-score"></i>
+    </li>
+    <br>
+    <li><span>Javascript</span>
+      <i class="far fa-star ability-score"></i>
+      <i class="far fa-star ability-score"></i>
+      <i class="fas fa-star ability-score"></i>
+      <i class="fas fa-star ability-score"></i>
+      <i class="fas fa-star ability-score"></i>
+    </li>
+    <br>
+    <li><span>JQuery</span>
+      <i class="far fa-star ability-score"></i>
+      <i class="far fa-star ability-score"></i>
+      <i class="fas fa-star ability-score"></i>
+      <i class="fas fa-star ability-score"></i>
+      <i class="fas fa-star ability-score"></i>
+    </li>
+    <br>
+    <li><span>Bootstrap</span>
+      <i class="far fa-star ability-score"></i>
+      <i class="fas fa-star-half-alt ability-score"></i>
+      <i class="fas fa-star ability-score"></i>
+      <i class="fas fa-star ability-score"></i>
+      <i class="fas fa-star ability-score"></i>
+    </li>
+    </div>
+    <div class="col-md-6" style="font-weight: bold; margin-top: 70px;">
+      <li><span>React.js</span>
+        <i class="far fa-star ability-score"></i>
+        <i class="far fa-star ability-score"></i>
+        <i class="fas fa-star-half-alt ability-score"></i>
+        <i class="fas fa-star ability-score"></i>
+        <i class="fas fa-star ability-score"></i>
+      </li>
+      <br>
+      <li><span>MySQL</span>
+        <i class="far fa-star ability-score"></i>
+        <i class="far fa-star ability-score"></i>
+        <i class="far fa-star ability-score"></i>
+        <i class="fas fa-star ability-score"></i>
+        <i class="fas fa-star ability-score"></i>
+      </li>
+      <br>
+      <li><span>Python</span>
         <i class="far fa-star ability-score"></i>
         <i class="fas fa-star-half-alt ability-score"></i>
         <i class="fas fa-star ability-score"></i>
         <i class="fas fa-star ability-score"></i>
         <i class="fas fa-star ability-score"></i>
-        </li>
-        <br>
-        <li><span>Javascript</span>
-          <i class="far fa-star ability-score"></i>
-          <i class="far fa-star ability-score"></i>
-          <i class="fas fa-star ability-score"></i>
-          <i class="fas fa-star ability-score"></i>
-          <i class="fas fa-star ability-score"></i>
-        </li>
-        <br>
-        <li><span>JQuery</span>
-          <i class="far fa-star ability-score"></i>
-          <i class="far fa-star ability-score"></i>
-          <i class="fas fa-star ability-score"></i>
-          <i class="fas fa-star ability-score"></i>
-          <i class="fas fa-star ability-score"></i>
-        </li>
-        <br>
-        <li><span>Bootstrap</span>
-          <i class="far fa-star ability-score"></i>
-          <i class="fas fa-star-half-alt ability-score"></i>
-          <i class="fas fa-star ability-score"></i>
-          <i class="fas fa-star ability-score"></i>
-          <i class="fas fa-star ability-score"></i>
-        </li>
-        </div>
-        <div class="col-md-6" style="font-weight: bold;">
-        <li><span>React.js</span>
-          <i class="far fa-star ability-score"></i>
-          <i class="far fa-star ability-score"></i>
-          <i class="fas fa-star-half-alt ability-score"></i>
-          <i class="fas fa-star ability-score"></i>
-          <i class="fas fa-star ability-score"></i>
-        </li>
-        <br>
-        <li><span>MySQL</span>
-          <i class="far fa-star ability-score"></i>
-          <i class="far fa-star ability-score"></i>
-          <i class="far fa-star ability-score"></i>
-          <i class="fas fa-star ability-score"></i>
-          <i class="fas fa-star ability-score"></i>
-        </li>
-        <br>
-        <li><span>Python</span>
-          <i class="far fa-star ability-score"></i>
-          <i class="fas fa-star-half-alt ability-score"></i>
-          <i class="fas fa-star ability-score"></i>
-          <i class="fas fa-star ability-score"></i>
-          <i class="fas fa-star ability-score"></i>
-        </li>
-        <br>
-        <li><span>Command Line Interface</span>
-          <i class="far fa-star ability-score"></i>
-          <i class="far fa-star ability-score"></i>
-          <i class="fas fa-star-half-alt ability-score"></i>
-          <i class="fas fa-star ability-score"></i>
-          <i class="fas fa-star ability-score"></i>
-        </li>
-        <br>
-        <li><span>Object Oriented Programming(OOP)</span>
-          <i class="far fa-star ability-score"></i>
-          <i class="far fa-star ability-score"></i>
-          <i class="fas fa-star-half-alt ability-score"></i>
-          <i class="fas fa-star ability-score"></i>
-          <i class="fas fa-star ability-score"></i>
-        </li>
-      </div>
-    </div>
+      </li>
+      <br>
+      <li><span>Command Line Interface</span>
+        <i class="far fa-star ability-score"></i>
+        <i class="far fa-star ability-score"></i>
+        <i class="fas fa-star-half-alt ability-score"></i>
+        <i class="fas fa-star ability-score"></i>
+        <i class="fas fa-star ability-score"></i>
+      </li>
+      <br>
+      <li><span>Object Oriented Programming(OOP)</span>
+        <i class="far fa-star ability-score"></i>
+        <i class="far fa-star ability-score"></i>
+        <i class="fas fa-star-half-alt ability-score"></i>
+        <i class="fas fa-star ability-score"></i>
+        <i class="fas fa-star ability-score"></i>
+      </li>
+  </div>
+</div>
+  
     <hr>
     <br>
       <div class="row">
