--- a/views/partials/abilities.ejs
+++ b/views/partials/abilities.ejs
@@ -1,3 +1,8 @@
+<style media="screen">
+  i{
+    font-size: 15px;
+  }
+</style>
 <div class="container" id='ability'>
   <h2 class='ability'>Abilities</h2>
   <p class='lead'>
@@ -8,11 +13,12 @@
 </p>
 <hr>
 <div class="row">
-  <div class="col-md-6" style="font-weight: bold;">
+  <div class=" col-lg-6 col-md-6 " style="font-weight: bold;">
     <h2 class='skill'>Skills</h2>
     <br>
     <li><span>HTML(5)</span>
       <i class="far fa-star ability-score"></i>
+      <i class="fas fa-star-half-alt ability-score"></i>
       <i class="fas fa-star ability-score"></i>
       <i class="fas fa-star ability-score"></i>
       <i class="fas fa-star ability-score"></i>
@@ -50,7 +56,7 @@
       <i class="fas fa-star ability-score"></i>
     </li>
     </div>
-    <div class="col-md-6" style="font-weight: bold; margin-top: 70px;">
+    <div class=" col-lg-6 col-md-6 " style="font-weight: bold; margin-top: 70px;">
       <li><span>React.js</span>
         <i class="far fa-star ability-score"></i>
         <i class="far fa-star ability-score"></i>
@@ -75,7 +81,7 @@
         <i class="fas fa-star ability-score"></i>
       </li>
       <br>
-      <li><span>Command Line Interface</span>
+      <li><span>Command Line Interface(CLI)</span>
         <i class="far fa-star ability-score"></i>
         <i class="far fa-star ability-score"></i>
         <i class="fas fa-star-half-alt ability-score"></i>
@@ -92,11 +98,11 @@
       </li>
   </div>
 </div>
-  
+
     <hr>
     <br>
       <div class="row">
-        <div class="col-md-6" style="font-weight: bold;">
+        <div class=" col-lg-6 col-md-6 " style="font-weight: bold;">
           <h2 class='skill'>Languages</h2>
           <br>
           <li><span>French(petit peu)</span>
@@ -116,7 +122,7 @@
           </li>
           <br>
           </div>
-          <div class="col-md-6" style="font-weight: bold; margin-top: 70px;">
+          <div class=" col-lg-6 col-md-6 " style="font-weight: bold; margin-top: 70px;">
           <li><span>English</span>
             <i class="fas fa-star-half-alt ability-score"></i>
             <i class="fas fa-star ability-score"></i>
