--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -30,7 +30,7 @@
           <a class="nav-link" href="#contactMe"><b>Contact Me</b></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/"><b>Blog</b></a>
+          <a class="nav-link" href="https://blog-website-2765.herokuapp.com/"><b>Blog</b></a>
         </li>
       </ul>
     </div>
