--- a/views/partials/projects.ejs
+++ b/views/partials/projects.ejs
@@ -3,7 +3,7 @@
   <h2 class='ability'>Projects</h2>
   <br/>
   <p class='lead' style='text-align: center'>
-  " It’s only after you’ve stepped outside your comfort zone that you begin to change, grow, and transform.
+  "It’s only after you’ve stepped outside your comfort zone that you begin to change, grow, and transform."
   <br/>
   <span class='lead2'>― Roy T. Bennett</span></p>
   <br/><br/><br/><hr/>
