Added chat bot and email link.

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,7 @@
 
     <div class="footer">
     <p  style='color:black'>
+        <a href="https://mail.google.com/mail/u/0/?view=cm&fs=1&to=krittika.saha.dev@gmail.com&tf=1" target="_blank"><i class="far fa-envelope"></i></a>
         <a href="https://www.github.com/Krittika-Saha" target="_blank"><i class="fab fa-github"></i></a>
         <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
         <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter"></i></a>
