--- a/views/home.ejs
+++ b/views/home.ejs
@@ -57,6 +57,18 @@
       <!--  -->
       <!--  -->
   </footer>
+  <!-- Start of ChatBot (www.chatbot.com) code -->
+  <script type="text/javascript">
+      window.__be = window.__be || {};
+      window.__be.id = "5fb540b4da258d0007af5a6f";
+      (function() {
+          var be = document.createElement('script'); be.type = 'text/javascript'; be.async = true;
+          be.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'cdn.chatbot.com/widget/plugin.js';
+          var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(be, s);
+      })();
+  </script>
+  <!-- End of ChatBot code -->
+
   </body>
   <!--Bootstrap javascript-->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
