--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,13 +10,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css">
     <!--Custom css-->
     <link rel="stylesheet" href="css/styles.css">
-    <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/android-chrome-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/android-chrome-512x512.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
-    <link rel="manifest" href="img/favicon/site.webmanifest">
+    <script src='https://www.google.com/recaptcha/api.js'></script>
+
 
     <title>Krittika Profile</title>
   </head>
