captcha updated (yes, yet again 🥱)

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,8 +10,8 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css">
     <!--Custom css-->
     <link rel="stylesheet" href="css/styles.css">
-    <script src='https://www.google.com/recaptcha/api.js'></script>
-
+    <!-- hCaptcha -->
+    <script src="https://hcaptcha.com/1/api.js" async defer></script>
 
     <title>Krittika Profile</title>
   </head>
