--- a/views/partials/contactme.ejs
+++ b/views/partials/contactme.ejs
@@ -10,9 +10,7 @@
       <input class="form-control" type="text" placeholder="Issue/Comment Title" name="postTitle" required><br/>
       <label>Post</label>
       <textarea class="form-control" name="postBody" rows="5" cols="30" placeholder="Main Content" required></textarea><br/>
-      <div class="g-recaptcha" data-sitekey="6Lfsw-cZAAAAABEPVNe-QW8FPgEOwnJoRHc18XDv" required></div>
-
-    </div>
+<div id="hcaptcha-demo" class="h-captcha" data-sitekey="9598647a-f8d4-42b9-b3f3-1d4a0dce80c0" data-callback="onSuccess" data-expired-callback="onExpire"></div>    </div>
     <button class="btn btn-info" type="submit" name="button">Send</button>
   </form>
 </div>
