--- a/views/partials/carousel.ejs
+++ b/views/partials/carousel.ejs
@@ -7,11 +7,10 @@
   </ol>
 
   <!-- Wrapper for slides -->
-  <!--For anyone wondering how I changed the background color, just get that svg tag outta the way. Then select the class u want the background cololor to be and, assign it!-->
   <div>
   <div class="carousel-inner">
     <div class="carousel-inner">
-      <div class="carousel-item active">
+      <div class="carousel-item active" data-interval='2000'>
 
         <div class="container">
           <div class="carousel-caption text-left">
@@ -21,7 +20,7 @@
           </div>
         </div>
       </div>
-      <div class="carousel-item">
+      <div class="carousel-item" data-interval='2000'>
 
         <div class="container">
           <div class="carousel-caption text-left">
@@ -31,7 +30,7 @@
           </div>
         </div>
       </div>
-      <div class="carousel-item">
+      <div class="carousel-item" data-interval='2000'>
 
         <div class="container">
           <div class="carousel-caption text-left">
