--- a/views/home.ejs
+++ b/views/home.ejs
@@ -58,6 +58,13 @@
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script src="//static.madebymagnitude.com/javascript/jQuery.snow.min.js"></script>
+  <script type="text/javascript">
+  $(document).ready(function(){
+    $.fn.snow();
+  });
+  </script>
 <footer class='footer'>
       <a href="https://mail.google.com/mail/u/0/?view=cm&fs=1&to=krittika.saha.dev@gmail.com&tf=1" target="_blank"><i class="far fa-envelope"></i></a>
       <a href="https://www.github.com/Krittika-Saha" target="_blank"><i class="fab fa-github"></i></a><br><br>
