--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8">
     <%- include('partials/header.ejs') %>
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="Krittika Saha's personal web">
+    <meta name="keywords" content="HTML, CSS">
+    <meta name="author" content="Krittika Saha">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!--Bootstrap css-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <!--Font awesome css-->
@@ -60,11 +63,6 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script src="//static.madebymagnitude.com/javascript/jQuery.snow.min.js"></script>
-  <script type="text/javascript">
-  $(document).ready(function(){
-    $.fn.snow();
-  });
-  </script>
 <footer class='footer'>
       <a href="https://mail.google.com/mail/u/0/?view=cm&fs=1&to=krittika.saha.dev@gmail.com&tf=1" target="_blank"><i class="far fa-envelope"></i></a>
       <a href="https://www.github.com/Krittika-Saha" target="_blank"><i class="fab fa-github"></i></a><br><br>
