just some things changed

--- a/views/partials/carousel.ejs
+++ b/views/partials/carousel.ejs
@@ -14,8 +14,8 @@
 
         <div class="container">
           <div class="carousel-caption text-left">
-            <h1>Hey! I'm Krittika</h1>
-            <h4>I'm a web developer in progress.</h4>
+            <h1>Hey! I'm Potato</h1>
+            <h4>I'm a just a harmless potato</h4>
             <img src="img/Profile.png" alt="Profile" id='profile'>
           </div>
         </div>
