--- a/views/partials/projects.ejs
+++ b/views/partials/projects.ejs
@@ -39,7 +39,7 @@
 
 <div class="col-md-6 ">
   <div class="container2" >
-    <a href="https://krittika-saha.github.io/Birthday-Countdown/" target='_blank'><img src="img/project3.png" alt="Avatar" class="image" width='100%'></a>
+    <a href="about:blank" target='_blank'><img src="img/project3.png" alt="Avatar" class="image" width='100%'></a>
     <div class="middle">
       <div class="text"><h2>Birthday Countdown website</h2>
       <hr class='container-hr'/>
@@ -56,3 +56,4 @@
 
 </div>
 <%# col-sm-12 col-xs-12 %>
+<%# https://krittika-saha.github.io/Birthday-Countdown/ %>
